# bazel_and_protobuf

./: .gitignore  Dockerfile  LICENSE  README.md  config.sh  fdsalkjfdsalkjfds
scripts/: build.sh
workspace/: WORKSPACE
workspace/Cplusplus/: main.cpp
workspace/Cplusplus/add_people/: BUILD.bazel  add_people.cpp  add_people.hpp  main.cpp
workspace/Cplusplus/list_people/: BUILD.bazel  list_people.cpp  list_people.hpp  main.cpp
workspace/Cplusplus/test/: BUILD  protobuf_test.cpp
workspace/FilesProto/: BUILD.bazel  WORKSPACE  point.proto
workspace/protoFiles/: BUILD.bazel  address.proto  person.proto  point.proto
